# OOP_Merklerex

./: .gitignore  Bot.cpp  Bot.h  BotRemoteControl.h  CLInterpreter.cpp  CLInterpreter.h  CMakeLists.txt  CSVReader.cpp  CSVReader.h  IActor.h  IBotControl.h  MerkelMain.cpp  MerkelMain.h  OrderBook.cpp  OrderBook.h  OrderBookEntry.cpp  OrderBookEntry.h  RollingAverageManager.cpp  RollingAverageManager.h  SimpleMovingAverage.cpp  SimpleMovingAverage.h  Wallet.cpp  Wallet.h  main.cpp  readme.txt
docs/: Merklerex.mdj  Report.odt
